fixed-text-align

--- a/style.css
+++ b/style.css
@@ -73,10 +73,10 @@ a.rounded-pill:hover {
   }
 }
 @media (max-width: 500px) {
-  .col-lg-3.col-md-4.col-5.icon.d-grid.gap-2 div {
+  .col-lg-3.col-md-4.col-4.icon.d-grid.gap-2 div {
     font-size: 0.875em;
   }
-  .col-lg-3.col-md-4.col-5.icon.d-grid.gap-2 + div > div {
+  .col-lg-3.col-md-4.col-4.icon.d-grid.gap-2 + div > div {
     font-size: 0.75em;
   }
   .medsos-block {
